--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.17/tailwind.min.css"
+      referrerpolicy="no-referrer"
+    />
+    <title>Space Tourism Multi Page Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
